BJS2-71000 update methods "topPopularHashtags" and "calculateActionPercentages"